--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -11,3 +11,49 @@ jenkins:
       permissions:
         - 'Overall/Administer:admin'
         - 'Overall/Read:authenticated'
+
+  plugins:
+    sites:
+      - id: "default"
+        url: "https://updates.jenkins.io/update-center.json"
+    required:
+      - id: "workflow-aggregator"
+        version: "latest"
+      - id: "git"
+        version: "latest"
+
+  jobs:
+    - script: >
+        pipelineJob('Varonis-assignment') {
+          definition {
+            cps {
+              script('''
+                pipeline {
+                    agent any
+
+                    stages {
+                        stage('Checkout') {
+                            steps {
+                                git 'https://github.com/rivkyschon/Varonis-assignment.git'
+                            }
+                        }
+                        stage('Build') {
+                            steps {
+                                echo 'Building the Docker image...'
+                                sh 'docker build -t django_app .'
+                            }
+                        }
+                        stage('Push') {
+                            steps {
+                                echo 'Pushing the Docker image...'
+                                sh 'docker login -u rivkyschon -p Ro506632774'
+                                sh 'docker push django_app'
+                            }
+                        }
+                    }
+                }
+              '''.stripIndent())
+              sandbox(true)
+            }
+          }
+        }
