--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -26,34 +26,16 @@ jenkins:
     - script: >
         pipelineJob('Varonis-assignment') {
           definition {
-            cps {
-              script('''
-                pipeline {
-                    agent any
-
-                    stages {
-                        stage('Checkout') {
-                            steps {
-                                git 'https://github.com/rivkyschon/Varonis-assignment.git'
-                            }
-                        }
-                        stage('Build') {
-                            steps {
-                                echo 'Building the Docker image...'
-                                sh 'docker build -t django_app .'
-                            }
-                        }
-                        stage('Push') {
-                            steps {
-                                echo 'Pushing the Docker image...'
-                                sh 'docker login -u rivkyschon -p Ro506632774'
-                                sh 'docker push django_app'
-                            }
-                        }
-                    }
+            cpsScm {
+              scm {
+                git {
+                  remote {
+                    url('https://github.com/rivkyschon/Varonis-assignment.git')
+                  }
+                  branches('*/main')
                 }
-              '''.stripIndent())
-              sandbox(true)
+              }
+              scriptPath('jenkinsfile')
             }
           }
         }
