--- a/dev-sec-ops-demo-main/env.yaml
+++ b/dev-sec-ops-demo-main/env.yaml
@@ -1,3 +1,3 @@
-TO_EMAIL: <<INSERT TO EMAIL>>
-FROM_EMAIL: <<INSERT FROM EMAIL>>
-SENDGRID_API_KEY: <<INSERT SENDGRID API KEY>>
+TO_EMAIL: r0583291601@gmail.com
+FROM_EMAIL: r0583291601@gmail.com
+SENDGRID_API_KEY: N9519RKBLEHR6QSTQ9WFEEUM
