--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,61 +1,59 @@
 steps:
-   - id: Build the Image
-     name: 'gcr.io/cloud-builders/docker'
-     entrypoint: /bin/bash
-     args:
-     - -c
-     - |
-       docker build -t us-central1-docker.pkg.dev/varonis-assignment-425319/my-docker-repo/sample-django-app:v0.0.0 . &&
-       docker image inspect us-central1-docker.pkg.dev/varonis-assignment-425319/my-docker-repo/sample-django-app:v0.0.0
-      options:
-        requestedVerifyOption: VERIFIED
-   - id: Scan The Image
-     name: 'gcr.io/cloud-builders/gcloud'
-     entrypoint: /bin/bash
-     args:
-     - -c
-     - |
-       gcloud artifacts docker images scan us-central1-docker.pkg.dev/varonis-assignment-425319/my-docker-repo/sample-django-app:v0.0.0 \
-       --format='value(response.scan)' > /workspace/scan_id.txt
-   - id: Check For Vulnerabilities within the Image
-     name: 'gcr.io/cloud-builders/gcloud'
-     entrypoint: /bin/bash
-     args:
-     - -c
-     - |
-       gcloud artifacts docker images list-vulnerabilities $(cat /workspace/scan_id.txt) \
-       --format='value(vulnerability.effectiveSeverity)' | if grep -Fxq $_SEVERITY; \
-       then echo 'Vulnerability check failed for docker image revision ID "v0.0.0", and will not be pushed to Artifact Registry Repo "my-docker-repo" because "$_SEVERITY" checks are impacting the image and needs to be fixed' && exit 1; else exit 0; fi
-   - id: Push Image to Artifact Registry
-     name: 'gcr.io/cloud-builders/docker'
-     entrypoint: /bin/bash
-     args:
-     - -c
-     - |
-       docker push us-central1-docker.pkg.dev/varonis-assignment-425319/my-docker-repo/sample-django-app:v0.0.0
-   - id: Capture Image Digest Information
-     name: 'gcr.io/cloud-builders/gcloud'
-     entrypoint: /bin/bash
-     args:
+  - id: Build the Image
+    name: 'gcr.io/cloud-builders/docker'
+    entrypoint: /bin/bash
+    args:
       - -c
       - |
-        gcloud container images describe us-central1-docker.pkg.dev/varonis-assignment-425319/my-docker-repo/sample-django-app:v0.0.0 \
+        docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID} . &&
+        docker image inspect us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID}
+  - id: Scan The Image
+    name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: /bin/bash
+    args:
+      - -c
+      - |
+        gcloud artifacts docker images scan us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID} \
+        --format='value(response.scan)' > /workspace/scan_id.txt
+  - id: Check For Vulnerabilities within the Image
+    name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: /bin/bash
+    args:
+      - -c
+      - |
+        gcloud artifacts docker images list-vulnerabilities $(cat /workspace/scan_id.txt) \
+        --format='value(vulnerability.effectiveSeverity)' | if grep -Fxq ${_SEVERITY}; \
+        then echo 'Vulnerability check failed for docker image revision ID "${_REVISION_ID}", and will not be pushed to Artifact Registry Repo "${_CONTAINER_REPO_NAME}" because "${_SEVERITY}" checks are impacting the image and needs to be fixed' && exit 1; else exit 0; fi
+  - id: Push Image to Artifact Registry
+    name: 'gcr.io/cloud-builders/docker'
+    entrypoint: /bin/bash
+    args:
+      - -c
+      - |
+        docker push us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID}
+  - id: Capture Image Digest Information
+    name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: /bin/bash
+    args:
+      - -c
+      - |
+        gcloud container images describe us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID} \
         --format='get(image_summary.digest)' > /workspace/digest.txt
-   - id: Change permissions on create_binauthz_policy.sh
-     name: bash
-     args: ['chmod', '+x', 'scripts/create_binauthz_policy.sh']
-   - id: Apply Binary Authorization Custom Policy for Image
-     name: 'gcr.io/cloud-builders/gcloud'
-     entrypoint: '/bin/sh'
-     args:
+  - id: Change permissions on create_binauthz_policy.sh
+    name: bash
+    args: ['chmod', '+x', 'scripts/create_binauthz_policy.sh']
+  - id: Apply Binary Authorization Custom Policy for Image
+    name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: /bin/sh'
+    args:
       - -c
       - |
         ./scripts/create_binauthz_policy.sh
-   - id: Create a cloud deploy release
-     name: 'gcr.io/cloud-builders/gcloud'
-     entrypoint: /bin/bash
-     args:
+  - id: Create a cloud deploy release
+    name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: /bin/bash
+    args:
       - -c
       - |
-        gcloud deploy releases create r-v0.0.0 --project=varonis-assignment-425319 --region=us-central1 --delivery-pipeline=ci-cd-test --images=notes-app-image=us-central1-docker.pkg.dev/varonis-assignment-425319/my-docker-repo/sample-django-app@$(cat /workspace/digest.txt)
-images: ['us-central1-docker.pkg.dev/varonis-assignment-425319/my-docker-repo/sample-django-app:v0.0.0']
+        gcloud deploy releases create r-${_REVISION_ID} --project=$PROJECT_ID --region=us-central1 --delivery-pipeline=ci-cd-test --images=notes-app-image=us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app@$(cat /workspace/digest.txt)
+images: ['us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID}']
