--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,62 +1,3 @@
-# steps:
-#   - id: Build the Image
-#     name: 'gcr.io/cloud-builders/docker'
-#     entrypoint: /bin/bash
-#     args:
-#       - -c
-#       - |
-#         docker build -t us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID} . &&
-#         docker image inspect us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID}
-#   - id: Scan The Image
-#     name: 'gcr.io/cloud-builders/gcloud'
-#     entrypoint: /bin/bash
-#     args:
-#       - -c
-#       - |
-#         gcloud artifacts docker images scan us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID} \
-#         --format='value(response.scan)' > /workspace/scan_id.txt
-#   - id: Check For Vulnerabilities within the Image
-#     name: 'gcr.io/cloud-builders/gcloud'
-#     entrypoint: /bin/bash
-#     args:
-#       - -c
-#       - |
-#         gcloud artifacts docker images list-vulnerabilities $(cat /workspace/scan_id.txt) \
-#         --format='value(vulnerability.effectiveSeverity)' | if grep -Fxq ${_SEVERITY}; \
-#         then echo 'Vulnerability check failed for docker image revision ID "${_REVISION_ID}", and will not be pushed to Artifact Registry Repo "${_CONTAINER_REPO_NAME}" because "${_SEVERITY}" checks are impacting the image and needs to be fixed' && exit 1; else exit 0; fi
-#   - id: Push Image to Artifact Registry
-#     name: 'gcr.io/cloud-builders/docker'
-#     entrypoint: /bin/bash
-#     args:
-#       - -c
-#       - |
-#         docker push us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID}
-#   - id: Capture Image Digest Information
-#     name: 'gcr.io/cloud-builders/gcloud'
-#     entrypoint: /bin/bash
-#     args:
-#       - -c
-#       - |
-#         gcloud container images describe us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID} \
-#         --format='get(image_summary.digest)' > /workspace/digest.txt
-#   - id: Change permissions on create_binauthz_policy.sh
-#     name: bash
-#     args: ['chmod', '+x', 'scripts/create_binauthz_policy.sh']
-#   - id: Apply Binary Authorization Custom Policy for Image
-#     name: 'gcr.io/cloud-builders/gcloud'
-#     entrypoint: /bin/sh'
-#     args:
-#       - -c
-#       - |
-#         ./scripts/create_binauthz_policy.sh
-#   - id: Create a cloud deploy release
-#     name: 'gcr.io/cloud-builders/gcloud'
-#     entrypoint: /bin/bash
-#     args:
-#       - -c
-#       - |
-#         gcloud deploy releases create r-${_REVISION_ID} --project=$PROJECT_ID --region=us-central1 --delivery-pipeline=ci-cd-test --images=notes-app-image=us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app@$(cat /workspace/digest.txt)
-# images: ['us-central1-docker.pkg.dev/$PROJECT_ID/${_CONTAINER_REPO_NAME}/sample-django-app:${_REVISION_ID}']
 steps:
   - id: Build the Image
     name: 'gcr.io/cloud-builders/docker'
@@ -81,7 +22,8 @@ steps:
       - -c
       - |
         gcloud artifacts docker images list-vulnerabilities $(cat /workspace/scan_id.txt) \
-        --format='value(vulnerability.effectiveSeverity)' | if grep -Fxq 'CRITICAL'; then echo 'Critical vulnerabilities found' && exit 1; else echo 'Proceeding despite high vulnerabilities for testing purposes'; fi
+        --format='value(vulnerability.effectiveSeverity)' | if grep -Fxq ${_SEVERITY}; \
+        then echo 'Vulnerability check failed for docker image revision ID "${_REVISION_ID}", and will not be pushed to Artifact Registry Repo "${_CONTAINER_REPO_NAME}" because "${_SEVERITY}" checks are impacting the image and needs to be fixed' && exit 1; else exit 0; fi
   - id: Push Image to Artifact Registry
     name: 'gcr.io/cloud-builders/docker'
     entrypoint: /bin/bash
@@ -102,7 +44,7 @@ steps:
     args: ['chmod', '+x', 'scripts/create_binauthz_policy.sh']
   - id: Apply Binary Authorization Custom Policy for Image
     name: 'gcr.io/cloud-builders/gcloud'
-    entrypoint: '/bin/sh'
+    entrypoint: /bin/sh'
     args:
       - -c
       - |
