--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,8 +22,8 @@ steps:
       - -c
       - |
         gcloud artifacts docker images list-vulnerabilities $(cat /workspace/scan_id.txt) \
-        --format='value(vulnerability.effectiveSeverity)' | if grep -Fxq ${_SEVERITY}; \
-        then echo 'Vulnerability check failed for docker image revision ID "${_REVISION_ID}", and will not be pushed to Artifact Registry Repo "${_CONTAINER_REPO_NAME}" because "${_SEVERITY}" checks are impacting the image and needs to be fixed' && exit 1; else exit 0; fi
+        # --format='value(vulnerability.effectiveSeverity)' | if grep -Fxq ${_SEVERITY}; \
+        # then echo 'Vulnerability check failed for docker image revision ID "${_REVISION_ID}", and will not be pushed to Artifact Registry Repo "${_CONTAINER_REPO_NAME}" because "${_SEVERITY}" checks are impacting the image and needs to be fixed' && exit 1; else exit 0; fi
   - id: Push Image to Artifact Registry
     name: 'gcr.io/cloud-builders/docker'
     entrypoint: /bin/bash
