--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -41,7 +41,7 @@ steps:
         --format='get(image_summary.digest)' > /workspace/digest.txt
   - id: Change permissions on create_binauthz_policy.sh
     name: bash
-    args: ['chmod', '+x', 'scripts/create_binauthz_policy.sh']
+    args: ['chmod', '+x', './create_binauthz_policy.sh']
   - id: Apply Binary Authorization Custom Policy for Image
     name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: /bin/sh'
